--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/styles.css"/>
     </head>
     <body>
-        <canvas class="webgl"></canvas>
+        <canvas class="webgl" id="mainCanvas"></canvas>
         <button class="sprites" id="leftArrow"><img src='https://roelyoon.github.io/Portfolio/Sprites/leftArrow.png'/></button>
         <button class="sprites" id="rightArrow"><img src='https://roelyoon.github.io/Portfolio/Sprites/rightArrow.png'/></button>
     </body>
