--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,5 @@
         <button class="sprites" id="leftArrow"><img src='https://roelyoon.github.io/Portfolio/Sprites/leftArrow.png'/></button>
         <button class="sprites" id="rightArrow"><img src='https://roelyoon.github.io/Portfolio/Sprites/rightArrow.png'/></button>
     </body>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="/index.js"></script>
 </html>
