--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,14 @@
         <title>Roel's Portfolio</title>
         <link rel="stylesheet" href="/styles.css"/>
     </head>
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "http://35.203.145.230:8082/three/build/three.module.js",
+                
+            }
+        }
+    </script>
     <body>
         <canvas class="webgl" id="mainCanvas"></canvas>
         <button class="sprites" id="leftArrow"><img src='https://roelyoon.github.io/Portfolio/Sprites/leftArrow.png'/></button>
