--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Roel's Portfolio</title>
+        <title>Roel's Rush Project</title>
+        <link rel="icon" href="https://png.pngtree.com/png-vector/20220125/ourmid/pngtree-united-states-map-geography-graphic-national-vector-png-image_26225682.png">
         <link rel="stylesheet" href="/styles.css"/>
     </head>
     <script type="importmap">
