--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <script type="importmap">
         {
             "imports": {
-                "three": "http://35.203.145.230:8082/three/build/three.module.js"
+                "three": "http://35.203.145.230:8082/three/build/three.module.js",
+                "interaction": "http://35.203.145.230:8082/three.interaction/src/interaction/Interaction.js"
             }
         }
     </script>
